# Glitch-Goblin

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  tauri.conf.json
.claude/: activity-log.json  kanban.json  ticket-templates.json
.claude/agents/: code-reviewer.md  doc-updater.md  frontend-ui.md  rust-backend.md  security-fixer.md  security-reviewer.md  terminal-pty.md
.claude/commands/: bugfix.md  kanban.md  new-feature.md  security-audit.md
.claude/kanban-backups/: kanban-20260317-105319.json  kanban-20260317-105344.json  kanban-20260317-105415.json  kanban-20260317-105454.json  kanban-20260317-110252.json  kanban-20260317-110300.json  kanban-20260317-113940.json
.github/workflows/: build.yml
capabilities/: default.json
frontend/: activity.js  app.js  board.js  bugsync.js  dashboard.js  deploy.js  detail.js  editors.js  error-handler.js  focus-mode.js  git.js  i18n.js  index.html  markdown.js  notes.js  notifications.js  onboarding.js  package-lock.json  package.json  projects.js  recovery.js  search.js  settings.js  statistics.js  style.css  terminal.js  updater.js  utils.js  vite.config.js
frontend/locales/: de.js  en.js
src/: activity.rs  bugsync.rs  commands.rs  config.rs  crypto.rs  db.rs  deploy.rs  error.rs  git.rs  kanban.rs  main.rs  oauth.rs  process_util.rs  runner.rs  state.rs  terminal.rs  undo.rs
