[package]
name = "glitch-goblin"
version = "0.2.9-alpha.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
notify = "8.0"
notify-debouncer-mini = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "fs"] }
dirs = "6.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
portable-pty = "0.8"
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chacha20poly1305 = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[profile.release]
strip = true
lto = true
